--- a/style.css
+++ b/style.css
@@ -3,3 +3,36 @@ body {
   height: 100%;
   margin: 0;
 }
+nav a{
+  background-color: grey;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+header {
+  text-align: center;
+}
+
+img{
+  position: center;
+  margin-left: 20%;
+  margin-right: 20%;
+}
+figcaption{
+  text-align: center;
+  font-size: 10px;
+}
+#featured-property p{
+  text-align: center;
+  font-size: 10px;
+  margin-left: 25%;
+  margin-right: 25%;
+}
+#details div {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  float: left;
+  background-color: red;
+  width:25%
+}
+
